--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
   "name": "sonos-kids-remote",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "@popperjs/core": "^2.5.3",
-    "bootstrap": "^4.5.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "i18next": "^19.8.2",
-    "i18next-http-middleware": "^3.0.6",
-    "i18next-node-fs-backend": "^2.1.3",
-    "jquery": "^3.5.1",
     "morgan": "~1.9.1",
-    "properties-reader": "^2.1.1",
-    "pug": "^3.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
+    "pug": "2.0.0-beta11",
+    "sonos": "^1.14.1"
   }
 }
