--- a/package.json
+++ b/package.json
@@ -13,7 +13,16 @@
     "http-errors": "~1.8.1",
     "mfrc522-rpi": "^2.1.3",
     "morgan": "~1.10.0",
-    "properties-reader": "^2.2.0",
+    "pug": "^3.0.2",
+    "sonos": "^1.14.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "cookie-parser": "~1.4.6",
+    "debug": "~4.3.2",
+    "express": "~4.17.1",
+    "http-errors": "~1.8.1",
+    "morgan": "~1.10.0",
     "pug": "^3.0.2",
     "sonos": "^1.14.1"
   }
