--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.8.1",
     "mfrc522-rpi": "^2.1.3",
     "morgan": "~1.10.0",
+    "nedb": "^1.8.0",
     "pug": "^3.0.2",
     "sonos": "^1.14.1"
   },
@@ -23,6 +24,7 @@
     "express": "~4.17.1",
     "http-errors": "~1.8.1",
     "morgan": "~1.10.0",
+    "nedb": "^1.8.0",
     "pug": "^3.0.2",
     "sonos": "^1.14.1"
   }
