--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "debug": "~4.3.2",
     "express": "~4.17.1",
     "http-errors": "~1.8.1",
+    "lokijs": "^1.5.12",
     "mfrc522-rpi": "^2.1.3",
     "morgan": "~1.10.0",
-    "nedb": "^1.8.0",
     "pug": "^3.0.2",
     "sonos": "^1.14.1"
   },
@@ -23,8 +23,8 @@
     "debug": "~4.3.2",
     "express": "~4.17.1",
     "http-errors": "~1.8.1",
+    "lokijs": "^1.5.12",
     "morgan": "~1.10.0",
-    "nedb": "^1.8.0",
     "pug": "^3.0.2",
     "sonos": "^1.14.1"
   }
