--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "chai": "^4.3.4",
@@ -12,10 +12,11 @@
     "express": "~4.17.1",
     "http-errors": "~1.8.1",
     "lokijs": "^1.5.12",
-    "mfrc522-rpi": "^2.1.3",
     "morgan": "~1.10.0",
     "pug": "^3.0.2",
-    "sonos": "^1.14.1"
+    "sequelize": "^6.3.5",
+    "sonos": "^1.14.1",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "chai": "^4.3.4",
@@ -26,6 +27,8 @@
     "lokijs": "^1.5.12",
     "morgan": "~1.10.0",
     "pug": "^3.0.2",
-    "sonos": "^1.14.1"
+    "sequelize": "^6.3.5",
+    "sonos": "^1.14.1",
+    "tslib": "^2.3.1"
   }
 }
