--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.17.1",
     "http-errors": "~1.8.1",
     "lokijs": "^1.5.12",
+    "mfrc522-rpi": "^2.1.3",
     "morgan": "~1.10.0",
     "pug": "^3.0.2",
     "sequelize": "^6.3.5",
