--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lokijs": "^1.5.12",
     "mfrc522-rpi": "^2.1.3",
     "morgan": "~1.10.0",
+    "onoff": "^6.0.3",
     "pug": "^3.0.2",
+    "rpi-gpio-buttons": "^2.0.1",
     "sequelize": "^6.3.5",
     "sonos": "^1.14.1",
     "tslib": "^2.3.1"
